# fastcomments

./: .gitignore  Cargo.toml  Dockerfile  index.html  init.sql
src/: main.rs
static/: embed.js
